# datarobotx-idp

./: .licenserc.yaml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  Untitled.ipynb  contributing.md  dev-requirements.txt  pyproject.toml  requirements.txt  security.md
.github/: pull_request_template.md
.github/workflows/: check_licenses.yml  check_security.yml  lint.yml  pylint.yml  release_pypi.yml  release_pypi_test.yml
custom_model/: custom.py
docker/linter/: Dockerfile  linter-requirements.txt  version.yaml
docker/linter/configs/yamlfix/: config.toml
linters/: README.md  lint.sh  lint_python.sh  lint_yaml.sh  run_all.sh  run_linter.sh
linters/utils/: diff.sh
src/datarobotx/idp/: __init__.py  autopilot.py  batch_predictions.py  calendars.py  credentials.py  custom_application_source.py  custom_application_source_version.py  custom_applications.py  custom_jobs.py  custom_metrics.py  custom_model_llm_validation.py  custom_model_versions.py  custom_models.py  datasets.py  datasource.py  datastore.py  deployments.py  execution_environment_versions.py  execution_environments.py  guard_configurations.py  llm_blueprints.py  playgrounds.py  projects.py  registered_model_versions.py  retraining_policies.py  use_cases.py  vector_databases.py
src/datarobotx/idp/common/: __init__.py  analytics_hooks.py  archive_dataset.py  asset_generator.py  asset_resolver.py  checkpoint_hooks.py  credentials_hooks.py  handle_io.py  hashing.py  path_dataset.py
tests/: __init__.py  conftest.py  pyproject.toml
tests/integration/: __init__.py  conftest.py  test_analytics_hooks.py  test_autopilot.py  test_batch_predictions.py  test_calendars.py  test_credentials.py  test_credentials_hooks.py  test_custom_application_source.py  test_custom_application_source_version.py  test_custom_applications.py  test_custom_jobs.py  test_custom_metrics.py  test_custom_model_deployments.py  test_custom_model_llm_validation.py  test_custom_model_versions.py  test_custom_models.py  test_datarobot_model_deployments.py  test_datasets.py  test_datasource.py  test_datastore.py  test_execution_environment_versions.py  test_execution_environments.py  test_get_or_create_custom_model_llm_validation.py  test_guard_configurations.py  test_llm_blueprints.py  test_playgrounds.py  test_projects.py  test_registered_model_versions.py  test_retraining_policies.py  test_use_cases.py  test_vector_databases.py
tests/unit/: test_archive_dataset.py  test_asset_resolvers.py  test_checkpoint_hooks.py  test_handle_io.py  test_hashing.py  test_path_dataset.py  test_pathdataset.py
