[project]
name = "datarobotx-idp"
version = "0.2.16"
requires-python = ">=3.8"
description = "Suite of utilities for idempotent creation of DataRobot assets"
readme = "README.md"
keywords = ["datarobot", "idempotent", "utilities"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]
authors = [{name = "DataRobot", email = "support@datarobot.com"}]
maintainers = [{name = "DataRobot", email = "support@datarobot.com"}]


[project.urls]
Homepage = "https://github.com/datarobot-community/datarobotx-idp"

[build-system]
requires = ["setuptools >= 65.5.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["dev-requirements.txt"] }}

[tool.setuptools.packages.find]
where = ["src"]
include = ["datarobotx.*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["D", "F", "I"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
force-sort-within-sections = true
forced-separate = ["datarobot", "datarobotx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
exclude = [
  "tests",
  "src/datarobotx/idp/vector_databases.py",
  "src/datarobotx/idp/playgrounds.py",
  "src/datarobotx/idp/llm_blueprints.py",
  "src/datarobotx/idp/custom_model_llm_validation.py",
]

[[tool.mypy.overrides]]
module = [
    "fsspec",
    "requests_toolbelt"
]
ignore_missing_imports = true
